Nueva version de home. Agrego fonts y actualizo dependencias

--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,7 +1,7 @@
 <!-- @if (isLogged()) { -->
   <app-navbar />
     <router-outlet></router-outlet>
-  <app-footer />
+  <!-- <app-footer /> -->
 <!-- } @else {
     <app-index />
 } -->
