--- a/frontend/src/app/components/home/home.component.html
+++ b/frontend/src/app/components/home/home.component.html
@@ -1,45 +1,58 @@
-<div class="container mt-5" style="align-items: center;">
-  <div class="row">
-    <div class="row">
-      <div class="col-sm-6 mb-3 mb-sm-0">
-        <div class="card mb-3">
-          <div class="card-body" routerLink="/grupos">
-            <h5 class="card-title">Grupos</h5>
-            <img src="../../assets/images/groups.png" height="80px">
-            <p class="card-text"><small class="text-muted">Una descripción</small></p>
-          </div>
-        </div>
-      </div>
-      <div class="col-sm-6 mb-3 mb-sm-0" routerLink="/payments">
-        <div class="card mb-3">
-          <div class="card-body">
-            <h5 class="card-title">Pagos</h5>
-            <img src="../../assets/images/payments.png" height="80px">
-            <p class="card-text"><small class="text-muted">Una descripción</small></p>
-          </div>
+<div style="height: 100vh; background-color: #212529;">
+  <div class="p-5 bg-dark" style="color: #ffffff; min-height: 350px;">
+    <div class="container py-5" style="width: 100%;">
+      <h1>Hola, Manaos!</h1>
+      <p class="lead" style="width: 60%;">
+        This takes the basic jumbotron above and makes its background edge-to-edge with a .container
+        inside to align content.
+      </p>
+    </div>
+  </div>
+
+  <div style="display: flex; flex-direction: row; width: 100%; flex-wrap: wrap; justify-content: center; margin: auto; margin-top: -2.3em;
+    background-color: #212529;">
+    <div class="card mb-3 mb-md-4 me-md-4 me-0 option">
+      <div class="card-body p-4">
+        <h5 class="card-title text-center default-text">Grupos</h5>
+        <!-- <h5 class="card-title text-center">Special title treatment</h5> -->
+        <!-- <p class="card-text">With supporting text below as a natural lead-in to additional content.</p> -->
+        <div style="position: absolute;">
+          <img src="../../assets/images/groups.png" height="80px">
         </div>
       </div>
     </div>
-    <div class="row">
-      <div class="col-sm-6 mb-3 mb-sm-0" routerLink="/contacts">
-        <div class="card mb-3">
-          <div class="card-body">
-            <h5 class="card-title">Contactos</h5>
-            <img src="../../assets/images/contacts.png" height="80px">
-            <p class="card-text"><small class="text-muted">Una descripción</small></p>
-          </div>
+
+    <div class="card mb-3 mb-md-4 me-md-4 me-0 option">
+      <div class="card-body p-4" style="position: relative;">
+        <h5 class="card-title text-center default-text">Pagos</h5>
+        <!-- <h5 class="card-title text-center">Special title treatment</h5> -->
+        <!-- <p class="card-text">With supporting text below as a natural lead-in to additional content.</p> -->
+        <div style="position: absolute;">
+          <img src="../../assets/images/payments.png" height="80px">
         </div>
       </div>
-      <div class="col-sm-6 mb-3 mb-sm-0" routerLink="/spendings">
-        <div class="card mb-3">
-          <div class="card-body">
-            <h5 class="card-title">Gastos</h5>
-            <img src="../../assets/images/spending.png" height="80px">
-            <p class="card-text"><small class="text-muted">Una descripción</small></p>
-          </div>
+    </div>
+
+    <div class="card mb-3 mb-md-4 me-md-4 me-0 option" style="position: relative; overflow: hidden;">
+      <i class="bi bi-chat-fill" style=" font-size: 6em; color: rgba(0, 0, 0, 0.048); position: absolute; top: -.1em; left: 35%;"></i>
+      <i class="bi bi-person-standing" style=" font-size: 20em; color: rgba(0, 0, 0, 0.048); position: absolute; bottom: -.6em; left: -.3em;"></i>
+      <i class="bi bi-person-raised-hand" style=" font-size: 20em; color: rgba(0, 0, 0, 0.048); position: absolute; bottom: -.6em; right: -.35em;"></i>
+      <div class="card-body p-4">
+        <h5 class="card-title text-center default-text">Contactos</h5>
+        <!-- <h5 class="card-title text-center">Special title treatment</h5> -->
+        <!-- <p class="card-text">With supporting text below as a natural lead-in to additional content.</p> -->
+      </div>
+    </div>
+
+    <div class="card mb-3 mb-md-4 me-md-4 me-0 option">
+      <div class="card-body p-4">
+        <h5 class="card-title text-center default-text">Gastos</h5>
+        <div style="position: absolute;">
+          <img src="../../assets/images/spending.png" height="80px">
         </div>
+        <!-- <h5 class="card-title text-center default-text">Special title treatment</h5> -->
+        <!-- <p class="card-text default-text">With supporting text below as a natural lead-in to additional content.</p> -->
       </div>
     </div>
   </div>
 </div>
-
