--- a/frontend/src/app/components/navbar/navbar.component.html
+++ b/frontend/src/app/components/navbar/navbar.component.html
@@ -1,5 +1,5 @@
 @if (isLogged()){
-<nav class="navbar navbar-expand-lg">
+<nav class="navbar navbar-expand-lg" style="background-color: black" data-bs-theme="dark">
   <div class="container-fluid">
     <a class="navbar-brand" routerLink="/home" routerLinkActive="active">Cuentas Claras</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
@@ -9,19 +9,19 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" routerLink="/grupos">Grupos</a>
+          <a class="nav-link" aria-current="page" routerLink="/grupos">Grupos</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link active" routerLink="/payments">Pagos</a>
+          <a class="nav-link" routerLink="/payments">Pagos</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link active" routerLink="contacts">Contactos</a>
+          <a class="nav-link" routerLink="contacts">Contactos</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link active" routerLink="/spendings">Gastos</a>
+          <a class="nav-link" routerLink="/spendings">Gastos</a>
         </li>
-        <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" routerLink="/" role="button" data-bs-toggle="dropdown"
+        <!-- <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" role="button" data-bs-toggle="dropdown"
             aria-expanded="false">
             <img src="../../assets/images/dropdown.png" height="30px">
           </a>
@@ -32,7 +32,7 @@
             </li>
             <li><a class="dropdown-item" routerLink="/login" (click)="logOut()">Cerrar sesión</a></li>
           </ul>
-        </li>
+        </li> -->
       </ul>
     </div>
 
