--- a/frontend/src/app/components/home/home.component.html
+++ b/frontend/src/app/components/home/home.component.html
@@ -11,47 +11,64 @@
 
   <div style="display: flex; flex-direction: row; width: 100%; flex-wrap: wrap; justify-content: center; margin: auto; margin-top: -2.3em;
     background-color: #212529;">
-    <div class="card mb-3 mb-md-4 me-md-4 me-0 option">
+    <div class="card mb-3 mb-md-4 me-md-4 me-0 option" style="position: relative; overflow: hidden;">
+      <i class="bi bi-chat-fill"
+        style=" font-size: 6em; color: rgba(0, 0, 0, 0.048); position: absolute; top: -.1em; left: 35%;"></i>
+      <i class="bi bi-person-standing"
+        style=" font-size: 20em; color: rgba(0, 0, 0, 0.048); position: absolute; bottom: -.6em; left: -.3em;"></i>
+      <i class="bi bi-person-raised-hand"
+        style=" font-size: 20em; color: rgba(0, 0, 0, 0.048); position: absolute; bottom: -.6em; right: -.35em;"></i>
       <div class="card-body p-4">
         <h5 class="card-title text-center default-text">Grupos</h5>
-        <!-- <h5 class="card-title text-center">Special title treatment</h5> -->
-        <!-- <p class="card-text">With supporting text below as a natural lead-in to additional content.</p> -->
-        <div style="position: absolute;">
-          <img src="../../assets/images/groups.png" height="80px">
-        </div>
-      </div>
-    </div>
-
-    <div class="card mb-3 mb-md-4 me-md-4 me-0 option">
-      <div class="card-body p-4" style="position: relative;">
-        <h5 class="card-title text-center default-text">Pagos</h5>
-        <!-- <h5 class="card-title text-center">Special title treatment</h5> -->
-        <!-- <p class="card-text">With supporting text below as a natural lead-in to additional content.</p> -->
-        <div style="position: absolute;">
-          <img src="../../assets/images/payments.png" height="80px">
+        <div class="hover-text hover-container">
+          <p class="card-text hover-text">Administrá tus grupos e invitá a tus amigos a formar parte de ellos.</p>
+          <p class="card-text hover-text">
+            Mantené un registro claro y organizado de todos los gastos compartidos. Accedé a detalles como quién
+            contribuyó y cuanto aportó cada miembro.</p>
         </div>
       </div>
     </div>
 
     <div class="card mb-3 mb-md-4 me-md-4 me-0 option" style="position: relative; overflow: hidden;">
-      <i class="bi bi-chat-fill" style=" font-size: 6em; color: rgba(0, 0, 0, 0.048); position: absolute; top: -.1em; left: 35%;"></i>
-      <i class="bi bi-person-standing" style=" font-size: 20em; color: rgba(0, 0, 0, 0.048); position: absolute; bottom: -.6em; left: -.3em;"></i>
-      <i class="bi bi-person-raised-hand" style=" font-size: 20em; color: rgba(0, 0, 0, 0.048); position: absolute; bottom: -.6em; right: -.35em;"></i>
+      <i class="bi bi-coin"
+        style=" font-size: 6em; color: rgba(0, 0, 0, 0.048); position: absolute; top: -.1em; left: 35%;"></i>
+      <i class="bi bi-piggy-bank-fill"
+        style=" font-size: 16em; color: rgba(0, 0, 0, 0.050); position: absolute; bottom: -.6em; left: 10%;"></i>
       <div class="card-body p-4">
-        <h5 class="card-title text-center default-text">Contactos</h5>
-        <!-- <h5 class="card-title text-center">Special title treatment</h5> -->
-        <!-- <p class="card-text">With supporting text below as a natural lead-in to additional content.</p> -->
+        <h5 class="card-title text-center default-text">Pagos</h5>
+        <div class="hover-text hover-container">
+          <p class="card-text hover-text">Gestiona pagos fácilmente. <br /> Saldar deudas es simple: carga pagos
+            individuales o
+            grupales, especifica beneficiarios y montos con precisión.</p>
+          <p>Simplifica tu vida financiera con una herramienta diseñada para brindarte control y claridad en cada
+            transacción.</p>
+        </div>
       </div>
     </div>
 
-    <div class="card mb-3 mb-md-4 me-md-4 me-0 option">
+    <div class="card mb-3 mb-md-4 me-md-4 me-0 option" style="position: relative; overflow: hidden;">
+      <i class="bi bi-person-rolodex"
+        style=" font-size: 12em; color: rgba(0, 0, 0, 0.048); position: absolute; top: 5%; left: 18%;"></i>
+      <div class="card-body p-4">
+        <h5 class="card-title text-center default-text">Contactos</h5>
+        <div class="hover-text hover-container">
+          <p class="card-text hover-text">Organiza tus contactos y amigos.</p>
+          <p>Revisá y administrá la lista de tus conexiones y miembros de grupos anteriores.</p>
+          <p>Te resultará de mucha utilidad cuando tengas que seleccionar amigos para futuros grupos o pagos.</p>
+        </div>
+      </div>
+    </div>
+
+    <div class="card mb-3 mb-md-4 me-md-4 me-0 option" style="position: relative; overflow: hidden;">
+      <i class="bi bi-cash-coin"
+        style=" font-size: 12em; color: rgba(0, 0, 0, 0.048); position: absolute; top: 14%; left: 18%;"></i>
       <div class="card-body p-4">
         <h5 class="card-title text-center default-text">Gastos</h5>
-        <div style="position: absolute;">
-          <img src="../../assets/images/spending.png" height="80px">
+        <div class="hover-text hover-container">
+          <p class="card-text hover-text">Registra y gestiona tus gastos.</p>
+          <p>Ya sea con personas individuales o dentro de un grupo, cargá información detallada como monto, fecha, comprobantes y participantes involucrados.</p>
+          <p>También podras personalizar la forma de division del gasto y la recurrencia del mismo.</p>
         </div>
-        <!-- <h5 class="card-title text-center default-text">Special title treatment</h5> -->
-        <!-- <p class="card-text default-text">With supporting text below as a natural lead-in to additional content.</p> -->
       </div>
     </div>
   </div>
