Cambio nombre de rutas y agrego routerlink en tarjetas de home

--- a/frontend/src/app/components/home/home.component.html
+++ b/frontend/src/app/components/home/home.component.html
@@ -11,7 +11,7 @@
 
   <div style="display: flex; flex-direction: row; width: 100%; flex-wrap: wrap; justify-content: center; margin: auto; margin-top: -2.3em;
     background-color: #212529;">
-    <div class="card mb-3 mb-md-4 me-md-4 me-0 option" style="position: relative; overflow: hidden;">
+    <div class="card mb-3 mb-md-4 me-md-4 me-0 option" style="position: relative; overflow: hidden;" routerLink="/grupos">
       <i class="bi bi-chat-fill"
         style=" font-size: 6em; color: rgba(0, 0, 0, 0.048); position: absolute; top: -.1em; left: 35%;"></i>
       <i class="bi bi-person-standing"
@@ -29,7 +29,7 @@
       </div>
     </div>
 
-    <div class="card mb-3 mb-md-4 me-md-4 me-0 option" style="position: relative; overflow: hidden;">
+    <div class="card mb-3 mb-md-4 me-md-4 me-0 option" style="position: relative; overflow: hidden;" routerLink="/pagos">
       <i class="bi bi-coin"
         style=" font-size: 6em; color: rgba(0, 0, 0, 0.048); position: absolute; top: -.1em; left: 35%;"></i>
       <i class="bi bi-piggy-bank-fill"
@@ -46,7 +46,7 @@
       </div>
     </div>
 
-    <div class="card mb-3 mb-md-4 me-md-4 me-0 option" style="position: relative; overflow: hidden;">
+    <div class="card mb-3 mb-md-4 me-md-4 me-0 option" style="position: relative; overflow: hidden;" routerLink="/contactos">
       <i class="bi bi-person-rolodex"
         style=" font-size: 12em; color: rgba(0, 0, 0, 0.048); position: absolute; top: 5%; left: 18%;"></i>
       <div class="card-body p-4">
@@ -59,7 +59,7 @@
       </div>
     </div>
 
-    <div class="card mb-3 mb-md-4 me-md-4 me-0 option" style="position: relative; overflow: hidden;">
+    <div class="card mb-3 mb-md-4 me-md-4 me-0 option" style="position: relative; overflow: hidden;" routerLink="/gastos">
       <i class="bi bi-cash-coin"
         style=" font-size: 12em; color: rgba(0, 0, 0, 0.048); position: absolute; top: 14%; left: 18%;"></i>
       <div class="card-body p-4">
