--- a/frontend/src/app/components/navbar/navbar.component.html
+++ b/frontend/src/app/components/navbar/navbar.component.html
@@ -9,16 +9,16 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
         <li class="nav-item">
-          <a class="nav-link" aria-current="page" routerLink="/grupos">Grupos</a>
+          <a class="nav-link" routerLink="/grupos">Grupos</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" routerLink="/payments">Pagos</a>
+          <a class="nav-link" routerLink="/pagos">Pagos</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" routerLink="contacts">Contactos</a>
+          <a class="nav-link" routerLink="/contactos">Contactos</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" routerLink="/spendings">Gastos</a>
+          <a class="nav-link" routerLink="/gastos">Gastos</a>
         </li>
         <!-- <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" role="button" data-bs-toggle="dropdown"
@@ -53,7 +53,7 @@
           <a class="nav-link active" routerLink="/login">Iniciar sesión</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link active" routerLink="/register">Registrarse</a>
+          <a class="nav-link active" routerLink="/registro">Registrarse</a>
         </li>
       </ul>
     </div>
