--- a/frontend/src/app/components/groups/groups.component.css
+++ b/frontend/src/app/components/groups/groups.component.css
@@ -1,7 +1,27 @@
+@font-face {
+    font-family: "Poppins Bold";
+    src: url("../../../assets/fonts/Poppins/Bold/Poppins-Bold.ttf") format('truetype');
+}
+
+@font-face {
+    font-family: "Poppins SemiBold";
+    src: url("../../../assets/fonts/Poppins/SemiBold/Poppins-SemiBold.ttf") format('truetype');
+}
+
+@font-face {
+    font-family: "Poppins Regular";
+    src: url("../../../assets/fonts/Poppins/Regular/Poppins-Regular.ttf") format('truetype');
+}
+
+@font-face {
+    font-family: "Poppins Medium";
+    src: url("../../../assets/fonts/Poppins/Medium/Poppins-Medium.ttf") format('truetype');
+}
+
 .sidebar {
     overflow-y: auto;
     max-height: 800px;
-    /* border-right: 1px solid #ccc; */
+    min-height: 600px;
 }
 
 .content {
@@ -13,6 +33,37 @@ li {
     cursor: pointer;
 }
 
-li:hover{
+li:not(.selected-snapshot):hover {
     background-color: #e9e9e9;
+}
+
+.selected-snapshot {
+    background-color: #d4d4d4;
+}
+
+h1 {
+    font-family: Poppins Bold, sans-serif;
+    font-size: 4em;
+}
+
+#btn-new-group {
+    font-family: Poppins Regular, sans-serif;
+}
+
+.main-title-details-group {
+    font-family: Poppins Bold, sans-serif;
+    font-size: 3em;
+    color: #3d3d3d;
+}
+
+.title-details-group {
+    font-family: Poppins Medium, sans-serif;
+    font-size: 3em;
+    /* color: #3d3d3d; */
+}
+
+.details-price {
+    font-family: Poppins Bold, sans-serif;
+    font-size: 2.5em;
+    color: #0000005c;
 }
