Funcionalidad para obtener los detalles del gasto. Reemplazo de iconos y css condicional, ahora hay una indicacion visual que muestra al grupo seleccionado

--- a/frontend/src/app/components/groups/groups-list/groups-list.component.css
+++ b/frontend/src/app/components/groups/groups-list/groups-list.component.css
@@ -1,8 +1,12 @@
-td ng-icon:hover{
+td i{
     cursor: pointer;
 }
 
-td ng-icon{
+td i{
     display: initial;
     overflow: inherit;
+}
+
+.spendings-list {
+    overflow-y: auto;
 }
