--- a/frontend/src/app/components/modals/group/group-details/group-details.component.html
+++ b/frontend/src/app/components/modals/group/group-details/group-details.component.html
@@ -2,42 +2,43 @@
   aria-labelledby="staticBackdropLabel" aria-hidden="true">
   <div class="modal-dialog">
     <div class="modal-content">
-
       <div class="modal-header">
         <h1 class="modal-title fs-3 text-center" id="details-Modal">Detalles</h1>
-        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"
+          (click)="deleteSelectedSpending()"></button>
       </div>
 
       <div class="modal-body">
         <div class="mb-2">
           <h2 class="fs-5">Categoria</h2>
           <ul>
-            <li>{{groupSpendings.category}}</li>
+            <li>{{selectedSpending?.category.name}}</li>
           </ul>
         </div>
 
         <div class="mb-2">
           <h2 class="fs-5">Tipo de division</h2>
           <ul>
-            <li>{{groupSpendings.division}}</li>
+            <li>{{selectedSpending?.division}}</li>
           </ul>
         </div>
 
         <div class="mb-2">
           <h2 class="fs-5">Recurrencia</h2>
           <ul>
-            <li>{{groupSpendings.recurrence}}</li>
+            <li>{{selectedSpending?.recurrence}}</li>
           </ul>
         </div>
 
         <div class="mb-2">
           <h2 class="fs-5">Monto por miembro</h2>
           <ul class="list-group">
-            @for (spendingMembers of groupSpendings.spendingMembers; track $index) {}
+            @for (spendingMember of selectedSpending?.spendingMembers; track $index) {
             <li class="list-group-item d-flex justify-content-between align-items-center">
-              <!-- {{spendingMembers}} -->
-              <span class="badge bg-secondary p-2 rounded-pill">$500</span>
+              {{spendingMember?.user.username}}
+              <span class="badge bg-secondary p-2 rounded-pill">${{spendingMember?.amount}}</span>
             </li>
+            }
           </ul>
         </div>
 
@@ -48,11 +49,11 @@
             <span>nombre_archivo.pdf</span>
           </span>
         </div>
-
       </div>
 
       <div class="modal-footer">
-        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cerrar</button>
+        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal"
+          (click)="deleteSelectedSpending()">Cerrar</button>
       </div>
     </div>
   </div>
