Nueva version de componente login y modificaciones en navbar para usuarios no logueados

--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,7 +1,9 @@
-<!-- @if (isLogged()) { -->
+@if (isLogged()) {
   <app-navbar />
-    <router-outlet></router-outlet>
+  <router-outlet></router-outlet>
   <!-- <app-footer /> -->
-<!-- } @else {
-    <app-index />
-} -->
+}
+@else {
+  <app-navbar />
+  <router-outlet></router-outlet>
+}
