--- a/frontend/src/app/components/navbar/navbar.component.html
+++ b/frontend/src/app/components/navbar/navbar.component.html
@@ -40,20 +40,24 @@
 </nav>
 } @else {
 <!--TODO: navbar usuario no logueado-->
-<nav class="navbar navbar-expand-lg">
-  <div class="container-fluid">
-    <a class="navbar-brand" href="#">CuentasClaras</a>
+<nav class="navbar navbar-expand-lg" style="background-color: #000000; border: 1px solid #161616" data-bs-theme="dark">
+  <div class="container pt-1">
+    <a class="navbar-brand" href="#">
+      <i class="bi bi-coin me-1"></i>
+      Cuentas Claras
+    </a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
       aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+      <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
         <li class="nav-item">
-          <a class="nav-link active" routerLink="/login">Iniciar sesión</a>
+          <a class="nav-link">Contacto</a>
         </li>
-        <li class="nav-item">
-          <a class="nav-link active" routerLink="/registro">Registrarse</a>
+        <li class="nav-item ms-1">
+          <!-- <a class="nav-link" routerLink="/registro">Registrarse</a> -->
+          <a class="btn btn-sm btn-cst" routerLink="/login">Registrarse</a>
         </li>
       </ul>
     </div>
