Nueva vista de registro. Nabvar incluido dentro de los componentes para mejor interaccion

--- a/frontend/src/app/components/login/login.component.html
+++ b/frontend/src/app/components/login/login.component.html
@@ -1,8 +1,9 @@
+<app-navbar />
 <div class="container-fluid"
   style="background-color: #000000; height: calc(100vh - 61.6px); display: flex; flex-direction: column; justify-content: center;">
   <div class="container">
     <div class="row justify-content-center align-items-center">
-      <div class="col-12 col-md-4">
+      <div class="col-12 col-md-3">
         <h1 class="text-center me-auto ms-auto">Inicia sesion en Cuentas Claras</h1>
         <div>
           <form (ngSubmit)="onSubmit()" style="width: 100%;">
