--- a/frontend/src/app/components/register/register.component.html
+++ b/frontend/src/app/components/register/register.component.html
@@ -1,30 +1,41 @@
-<section>
-    <h1>Register Me</h1>
-    <form (ngSubmit)="register()">
-        <div class="m-3">
-            <label for="InputUsername" class="form-label">Username</label>
-            <input type="text" class="form-control" id="InputUsername" name= "username" [(ngModel)]="user.username" required>
+<app-navbar />
+<div class="container-fluid"
+  style="background-color: #000000; height: calc(100vh - 61.6px); display: flex; flex-direction: column; justify-content: center;">
+  <div class="container">
+    <div class="row justify-content-center align-items-center">
+      <div class="col-12 col-lg-4 col-xl-3">
+        <h1 class="text-center me-auto ms-auto">Registrate en Cuentas Claras</h1>
+        <div>
+          <form (ngSubmit)="register()" style="width: 100%;">
+            <div class="mt-3 cst-input-div">
+              <input type="text" class="cst-form-control-lg" placeholder="Nombre" id="InputName" name="name"
+                [(ngModel)]="user.name" required>
+            </div>
+            <div class="mt-3 cst-input-div">
+              <input type="text" class="cst-form-control-lg" placeholder="Apellido" id="InputLastName" name="lastName"
+                [(ngModel)]="user.lastName" required>
+            </div>
+            <div class="mt-3 cst-input-div">
+              <input type="text" class="cst-form-control-lg" placeholder="Email" id="InputEmail" name="email"
+                [(ngModel)]="user.email" required>
+            </div>
+            <div class="mt-3 cst-input-div">
+              <input type="text" class="cst-form-control-lg" placeholder="Nombre de usuario" id="InputUsername"
+                name="username" [(ngModel)]="user.username" required>
+            </div>
+            <div class="mt-3 cst-input-div">
+              <input type="password" class="cst-form-control-lg" placeholder="Contraseña" id="InputPassword"
+                name="password" [(ngModel)]="user.password" required>
+            </div>
+            <div class="mt-3 cst-input-div">
+              <input type="password" class="cst-form-control-lg" placeholder="Confirmar Contraseña" id="InputPassword2"
+                name="password2" [(ngModel)]="confirmPassword" required>
+            </div>
+            <button type="submit" class="btn btn-light mt-3" style="width: 100%; height: 48px;">
+              Registrarme :)
+            </button>
+          </form>
         </div>
-        <div class="m-3">
-            <label for="InputLastName" class="form-label">Last name</label>
-            <input type="text" class="form-control" id="InputLastName" name= "lastName" [(ngModel)]="user.lastName" required>
-        </div>
-        <div class="m-3">
-            <label for="InputName" class="form-label">Name</label>
-            <input type="text" class="form-control" id="InputName" name= "name" [(ngModel)]="user.name" required>
-        </div>
-        <div class="m-3">
-            <label for="InputEmail" class="form-label">Email address</label>
-            <input type="email" class="form-control" id="InputEmail" name= "email" [(ngModel)]="user.email" required>
-        </div>
-        <div class="m-3">
-            <label for="InputPassword" class="form-label">Password</label>
-            <input type="password" class="form-control" id="InputPassword" name= "password" [(ngModel)]="user.password" required>
-        </div>
-        <div class="m-3">
-            <label for="InputPassword2" class="form-label">Repeat password</label>
-            <input type="password" class="form-control" id="InputPassword2" name= "password2" [(ngModel)]="confirmPassword" required>
-        </div>
-        <button type="submit" class="btn btn-success m-3">Register me</button>
-    </form>
-</section>
+      </div>
+    </div>
+  </div>
