Vista default ahora es /login. Mejoras en navbar y cambio de estilo en background general

--- a/frontend/src/app/components/groups/groups.component.html
+++ b/frontend/src/app/components/groups/groups.component.html
@@ -1,4 +1,4 @@
-<div style="min-height: 100vh; background-color: #212529;">
+<div style="min-height: 100vh; background-color: #000000ed;">
   <div class="container" style="max-width: 1200px;">
     <div
       style="display: flex; flex-direction: row; flex-wrap: wrap; justify-content: space-between; align-items: center;">
