--- a/frontend/src/app/components/home/home.component.html
+++ b/frontend/src/app/components/home/home.component.html
@@ -1,5 +1,5 @@
-<div style="height: 100vh; background-color: #212529;">
-  <div class="p-5 bg-dark" style="color: #ffffff; min-height: 350px;">
+<div style="min-height: calc(100vh - 61.6px); background-color: #000000ed;">
+  <div class="p-5" style="color: #ffffff; min-height: 350px;">
     <div class="container py-5" style="width: 100%;">
       <h1>Hola, Manaos!</h1>
       <p class="lead" style="width: 60%;">
@@ -9,9 +9,10 @@
     </div>
   </div>
 
-  <div style="display: flex; flex-direction: row; width: 100%; flex-wrap: wrap; justify-content: center; margin: auto; margin-top: -2.3em;
-    background-color: #212529;">
-    <div class="card mb-3 mb-md-4 me-md-4 me-0 option" style="position: relative; overflow: hidden;" routerLink="/grupos">
+  <div
+    style="display: flex; flex-direction: row; width: 100%; flex-wrap: wrap; justify-content: center; margin: auto; margin-top: -2.3em">
+    <div class="card mb-3 mb-md-4 me-md-4 me-0 option" style="position: relative; overflow: hidden;"
+      routerLink="/grupos">
       <i class="bi bi-chat-fill"
         style=" font-size: 6em; color: rgba(0, 0, 0, 0.048); position: absolute; top: -.1em; left: 35%;"></i>
       <i class="bi bi-person-standing"
@@ -29,7 +30,8 @@
       </div>
     </div>
 
-    <div class="card mb-3 mb-md-4 me-md-4 me-0 option" style="position: relative; overflow: hidden;" routerLink="/pagos">
+    <div class="card mb-3 mb-md-4 me-md-4 me-0 option" style="position: relative; overflow: hidden;"
+      routerLink="/pagos">
       <i class="bi bi-coin"
         style=" font-size: 6em; color: rgba(0, 0, 0, 0.048); position: absolute; top: -.1em; left: 35%;"></i>
       <i class="bi bi-piggy-bank-fill"
@@ -46,7 +48,8 @@
       </div>
     </div>
 
-    <div class="card mb-3 mb-md-4 me-md-4 me-0 option" style="position: relative; overflow: hidden;" routerLink="/contactos">
+    <div class="card mb-3 mb-md-4 me-md-4 me-0 option" style="position: relative; overflow: hidden;"
+      routerLink="/contactos">
       <i class="bi bi-person-rolodex"
         style=" font-size: 12em; color: rgba(0, 0, 0, 0.048); position: absolute; top: 5%; left: 18%;"></i>
       <div class="card-body p-4">
@@ -59,14 +62,16 @@
       </div>
     </div>
 
-    <div class="card mb-3 mb-md-4 me-md-4 me-0 option" style="position: relative; overflow: hidden;" routerLink="/gastos">
+    <div class="card mb-3 mb-md-4 me-md-4 me-0 option" style="position: relative; overflow: hidden;"
+      routerLink="/gastos">
       <i class="bi bi-cash-coin"
         style=" font-size: 12em; color: rgba(0, 0, 0, 0.048); position: absolute; top: 14%; left: 18%;"></i>
       <div class="card-body p-4">
         <h5 class="card-title text-center default-text">Gastos</h5>
         <div class="hover-text hover-container">
           <p class="card-text hover-text">Registra y gestiona tus gastos.</p>
-          <p>Ya sea con personas individuales o dentro de un grupo, cargá información detallada como monto, fecha, comprobantes y participantes involucrados.</p>
+          <p>Ya sea con personas individuales o dentro de un grupo, cargá información detallada como monto, fecha,
+            comprobantes y participantes involucrados.</p>
           <p>También podras personalizar la forma de division del gasto y la recurrencia del mismo.</p>
         </div>
       </div>
