Authorization y Authentication. Version segun la catedra

--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,8 +1,8 @@
-@if (isLogged()) {
-  <app-navbar />
+<!-- @if (isLogged()) { -->
+  <!-- <app-navbar /> -->
   <router-outlet></router-outlet>
   <!-- <app-footer /> -->
-}
+<!-- }
 @else {
   <router-outlet></router-outlet>
-}
+} -->
