--- a/frontend/src/app/components/login/login.component.html
+++ b/frontend/src/app/components/login/login.component.html
@@ -6,16 +6,16 @@
       <div class="col-12 col-md-3">
         <h1 class="text-center me-auto ms-auto">Inicia sesion en Cuentas Claras</h1>
         <div>
-          <form (ngSubmit)="onSubmit()" style="width: 100%;">
+          <form [formGroup]="loginForm" (ngSubmit)="onSubmit()" style="width: 100%;">
             <div class="mt-3 cst-input-div">
               <input type="text" class="cst-form-control-lg" placeholder="Nombre de usuario" id="InputUsername"
-                name="username" [(ngModel)]="user.username" required>
+                name="username" formControlName="username">
             </div>
             <div class="mt-3 cst-input-div">
               <input type="password" class="cst-form-control-lg" placeholder="Contraseña" id="InputPassword"
-                name="password" [(ngModel)]="user.password" required>
+                name="password" formControlName="password">
             </div>
-            <button type="submit" class="btn btn-light mt-3" style="width: 100%; height: 48px;">
+            <button type="submit" [disabled]="loginForm.invalid" class="btn btn-light mt-3" style="width: 100%; height: 48px;">
               &#64;
               Continuar con nombre de usuario
             </button>
