Shotgun Surgery. Interceptores, modificacion de guard, datos de usuario a partir de token. Refactor y nueva version de vista y creacion de gastos

--- a/frontend/src/app/components/home/home.component.html
+++ b/frontend/src/app/components/home/home.component.html
@@ -2,10 +2,10 @@
 <div style="min-height: calc(100vh - 61.6px); background-color: #000000ed;">
   <div class="p-5" style="color: #ffffff; min-height: 350px;">
     <div class="container py-5" style="width: 100%;">
-      <h1>Hola, Manaos!</h1>
+      <h1>Hola, {{ currentUser?.username }}!</h1>
       <p class="lead" style="width: 60%;">
-        This takes the basic jumbotron above and makes its background edge-to-edge with a .container
-        inside to align content.
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Dignissimos delectus, quos voluptate, vero aliquam
+        perspiciatis fuga quaerat quasi iste vitae quam! Unde.
       </p>
     </div>
   </div>
