--- a/frontend/src/app/components/register/register.component.html
+++ b/frontend/src/app/components/register/register.component.html
@@ -6,32 +6,33 @@
       <div class="col-12 col-lg-4 col-xl-3">
         <h1 class="text-center me-auto ms-auto">Registrate en Cuentas Claras</h1>
         <div>
-          <form (ngSubmit)="register()" style="width: 100%;">
+          <form [formGroup]="registerForm" (ngSubmit)="onSubmit()" style="width: 100%;">
             <div class="mt-3 cst-input-div">
               <input type="text" class="cst-form-control-lg" placeholder="Nombre" id="InputName" name="name"
-                [(ngModel)]="user.name" required>
+                formControlName="name" required>
             </div>
             <div class="mt-3 cst-input-div">
               <input type="text" class="cst-form-control-lg" placeholder="Apellido" id="InputLastName" name="lastName"
-                [(ngModel)]="user.lastName" required>
+                formControlName="lastName" required>
             </div>
             <div class="mt-3 cst-input-div">
               <input type="text" class="cst-form-control-lg" placeholder="Email" id="InputEmail" name="email"
-                [(ngModel)]="user.email" required>
+                formControlName="email" required>
             </div>
             <div class="mt-3 cst-input-div">
               <input type="text" class="cst-form-control-lg" placeholder="Nombre de usuario" id="InputUsername"
-                name="username" [(ngModel)]="user.username" required>
+                name="username" formControlName="username" required>
             </div>
             <div class="mt-3 cst-input-div">
               <input type="password" class="cst-form-control-lg" placeholder="Contraseña" id="InputPassword"
-                name="password" [(ngModel)]="user.password" required>
+                name="password" formControlName="password" required>
             </div>
             <div class="mt-3 cst-input-div">
               <input type="password" class="cst-form-control-lg" placeholder="Confirmar Contraseña" id="InputPassword2"
-                name="password2" [(ngModel)]="confirmPassword" required>
+                name="password2" formControlName="confirmPassword" required>
             </div>
-            <button type="submit" class="btn btn-light mt-3" style="width: 100%; height: 48px;">
+            <button type="submit" [disabled]="registerForm.invalid" class="btn btn-light mt-3"
+              style="width: 100%; height: 48px;">
               Registrarme :)
             </button>
           </form>
